--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,13 +11,10 @@ html
          != css("skin")
          link(rel="stylesheet", href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css")
 
-
-      script(src="/lib/jquery-1.8.2.js")
+      != js("lib/jquery-1.8.2.js")
       != js("ext/nav-handler")
       != js("pages/preferences")
-      block custom-scripts
-      script(src="/lib/jquerymobile-1.2.0.js")
-      // != js("lib/knockout")
+      != js("lib/jquerymobile-1.2.0.js")
 
    - var viewDir = locals.root
    - var view = locals.filename.replace(viewDir, "").replace(".jade", "").replace(/^[\\\/]/g, "");
