Added game skeleton.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,6 +13,10 @@ html
 
       != js("lib/jquery-1.8.2.js")
       != js("ext/nav-handler")
+      != js("pages/profile")
+      != js("pages/points")
+      != js("pages/leaderboard")
+      != js("pages/connect")
       != js("pages/preferences")
       != js("lib/jquerymobile-1.2.0.js")
 
