--- a/views/points/attendanceStreak.jade
+++ b/views/points/attendanceStreak.jade
@@ -6,3 +6,22 @@ block header
 
 block content
    
+   .info
+      .left-cap
+      .right-cap
+
+      .stadium-info
+         .stadium= stadium.name
+         .location= stadium.location
+
+      .game-info
+         .home-info
+            .inner
+               .team= home.name
+               .record= home.record
+         .vs
+         .visitor-info
+            .inner
+               .team= visitor.name
+               .record= visitor.record
+
