--- a/assets/css/lib/variables.styl
+++ b/assets/css/lib/variables.styl
@@ -1,8 +1,1 @@
-// Helper variables
-one-fifth = 20%
-two-fifths = 40%
-three-fifths = 60%
-four-fifths = 80%
-
-one-third = 33.33333333332%
-two-thirds = 66.66666666665%
+color-light-gray = #C0C0C0
