--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,10 +6,12 @@ html
       meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no")
       meta(name="apple-mobile-web-app-capable", content="yes")
 
-      block styles
-         != css("lib/normalize")
-         != css("skin")
-         link(rel="stylesheet", href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css")
+      
+      != css("lib/normalize")
+      link(rel="stylesheet", href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css")
+      != css("lib/fannect")
+      != css("skin")
+      != css("pages/points")
 
       != js("lib/jquery-1.8.2.js")
       != js("ext/nav-handler")
@@ -24,7 +26,7 @@ html
    - var view = locals.filename.replace(viewDir, "").replace(".jade", "").replace(/^[\\\/]/g, "");
    - var viewClass = view.replace(/[\\\/]/g, "-");
    body
-      div(class=viewClass, data-role="page")
+      div(class=viewClass, data-role="page", data-theme="a")
 
          #header(data-role="header")
             block header
@@ -35,8 +37,8 @@ html
          #footer(data-role="footer", data-id="footer", data-position="fixed")
             div(data-role="navbar")
                ul
-                  li: a#profile-menu(href="/profile", data-icon="grid") Profile
-                  li: a#points-menu(href="/points", data-icon="grid") Points
-                  li: a#leaderboard-menu(href="/leaderboard", data-icon="grid") Leaderboard
-                  li: a#connect-menu(href="/connect", data-icon="grid") Connect
-                  li: a#preferences-menu(href="/preferences", data-icon="grid", data-prefetch="true") Preferences
+                  li: a#profile-menu(href="/profile", data-icon="custom") Profile
+                  li: a#points-menu(href="/points", data-icon="custom") Points
+                  li: a#leaderboard-menu(href="/leaderboard", data-icon="custom") Leaderboard
+                  li: a#connect-menu(href="/connect", data-icon="custom") Connect
+                  li: a#preferences-menu(href="/preferences", data-icon="custom", data-prefetch="true") Preferences
