--- a/views/points/attendanceStreak.jade
+++ b/views/points/attendanceStreak.jade
@@ -25,3 +25,8 @@ block content
                .team= visitor.name
                .record= visitor.record
 
+   .bottom
+      .inner
+         a.check-in(data-role="button") Check In
+
+
