Started styling profile.

--- a/assets/css/skin.styl
+++ b/assets/css/skin.styl
@@ -11,9 +11,11 @@
    src: url(/fonts/JerseyM54.ttf)
 
 .header
+   .ui-btn-left
+      top: 5px
    .ui-title
       margin-top: .5em
-      margin-bottom: .6em
+      margin-bottom: .5em
       font-family: JerseyM54, Helvetica, Arial, sans-serif
       font-size: 1.2em
       text-transform: uppercase
