--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,6 +12,7 @@ html
       != css("lib/fannect")
       != css("skin")
       != css("pages/points")
+      != css("pages/profile")
 
       != js("lib/jquery-1.8.2.js")
       != js("ext/nav-handler")
