Styled Guess The Score page.

--- a/assets/css/pages/points.styl
+++ b/assets/css/pages/points.styl
@@ -95,10 +95,10 @@
                float: left
                width: 20% 
                height: 36px
-               background: url(/images/games/attendance-streak/Overlay_VsButton@2x.png) no-repeat 50% 0%
+               background: url(/images/games/Overlay_VsButton@2x.png) no-repeat 50% 0%
                background-size: 36px 36px
 
-            .visitor-info
+            .away-info
                float: left
                width: 40%
                .inner
@@ -118,5 +118,45 @@
             padding: 0 12px
             margin: 32px auto 
 
+.points-guessTheScore-pick
+   .input
+      margin: 10px auto 0
+      width: 320px
 
 
+      .guess-block
+         float: left
+         width: 50%
+         text-align: center
+
+         label
+            color: color-light-gray
+
+         input[type=number]
+            font-family: JerseyM54, Helvetica, Arial, sans-serif
+            font-size: 5.0em
+            padding:  5px 10px
+            width: 140px
+            height: 200px
+            margin: 0 auto
+            text-align: center 
+            border-radius: 10px
+
+   .team-info
+      width: 304px
+      margin: 4px auto 0
+
+      .team-glass
+         float: left
+
+      .vs
+         float: left
+         width: 36px 
+         height: 36px
+         margin-top: 2px
+         background: url(/images/games/Overlay_VsButton@2x.png) no-repeat 50% 0%
+         background-size: 36px 36px
+   
+   .submit-wrap
+      width: 250px
+      margin: 12px auto 0
