--- a/views/points/attendanceStreak.jade
+++ b/views/points/attendanceStreak.jade
@@ -20,10 +20,10 @@ block content
                .team= home.name
                .record= home.record
          .vs
-         .visitor-info
+         .away-info
             .inner
-               .team= visitor.name
-               .record= visitor.record
+               .team= away.name
+               .record= away.record
 
    .bottom
       .inner
