--- a/views/profile/profile.jade
+++ b/views/profile/profile.jade
@@ -5,7 +5,7 @@ block header
    a.ui-btn-right(href="/profile/selectSport", data-role="button") Add Team
 
 block content
-   .profile
+   .scrollable-content
       .profile-images
          .team-wrap
             img(src="#{team_image}")
