--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,6 +13,7 @@ html
       != css("skin")
       != css("pages/points")
       != css("pages/profile")
+      != css("pages/preferences")
 
       != js("lib/jquery-1.8.2.js")
       != js("ext/nav-handler")
