--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,13 +16,14 @@ html
       != css("pages/preferences")
 
       != js("lib/jquery-1.8.2.js")
-      != js("ext/nav-handler")
       != js("pages/profile")
       != js("pages/points")
       != js("pages/leaderboard")
       != js("pages/connect")
       != js("pages/preferences")
       != js("lib/jquerymobile-1.2.0.js")
+      != js("ext/scroller")
+      != js("ext/nav-handler")
 
    - var viewDir = locals.root
    - var view = locals.filename.replace(viewDir, "").replace(".jade", "").replace(/^[\\\/]/g, "");
