Finished guess the score (guessed).

--- a/assets/css/pages/points.styl
+++ b/assets/css/pages/points.styl
@@ -184,3 +184,15 @@
             margin-left: 10px
          &.away .score
             margin-left: 21px
+
+   .game-preview
+      background: url(/images/games/guess-the-score/Overlay_SubtleShadow@2x.png) 50% -24px no-repeat
+      background-size: 290px 60px
+      width: 290px
+      min-height: 36px
+      margin 0 auto
+      padding-top: 7px
+
+      .title
+         text-align: center
+         color: color-light-gray
