--- a/views/points/guessTheScore/picked.jade
+++ b/views/points/guessTheScore/picked.jade
@@ -27,9 +27,5 @@ block content
 
       .scrolling-text Your pick is set! Check back after the game to view results!
 
-
-      //- .scrolling-text
-      //-    .text-wrap
-      //-       .text After the game to view results!
-      //-       .text
-      //-    .cover
+      .game-preview
+         .title Game Preview
