--- a/views/points/points.jade
+++ b/views/points/points.jade
@@ -4,7 +4,7 @@ block header
    h1 Points
 
 block content
-   ul(data-role="listview")
+   ul.pattern-bg(data-role="listview")
       li
          a(href="/points/guessTheScore", data-transition="slide")
             .icon.gamecell.guess-the-score
