--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,8 +11,9 @@ html
       link(rel="stylesheet", href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css")
       != css("lib/fannect")
       != css("skin")
-      != css("pages/points")
       != css("pages/profile")
+      != css("pages/points")
+      != css("pages/leaderboard")
       != css("pages/preferences")
 
       != js("lib/jquery-1.8.2.js")
