Created connect and leaderboard pages.

--- a/assets/css/lib/variables.styl
+++ b/assets/css/lib/variables.styl
@@ -3,4 +3,5 @@ footer-height = 56px
 
 color-light-gray = #C0C0C0
 color-dark-gray = #6b6b6b
-color-dark-red = #D51920
+color-red = #c5171e
+color-dark-red = #971418
