--- a/assets/css/pages/leaderboard.styl
+++ b/assets/css/pages/leaderboard.styl
@@ -2,6 +2,8 @@
 @import "../lib/mixins"
 
 .leaderboard-leaderboard
+   background: url(/images/Pattern_FabricKnit@2x.png)
+   background-size: 4px 4px
    .ui-content
       padding: 0
    .scrollable-content
@@ -14,3 +16,17 @@
       margin-bottom: 5px
    .fans
       margin: 0
+      .fan
+         .rank
+            position: absolute
+            right: 8px
+            top: 26px 
+            background: url(/images/leaderboard/Overlay_LeaderboardRank@2x.png)
+            background-size: 27px 28px
+            width: 27px
+            height: 28px
+            font-family: JerseyM54, Helvetica, Arial, sans-serif
+            text-align: center
+            font-size: 1.2em
+            line-height: 28px
+            color: color-dark-red
