--- a/assets/css/pages/points.styl
+++ b/assets/css/pages/points.styl
@@ -2,6 +2,8 @@
 @import "../lib/variables"
 
 .points-points
+   background: url(/images/Pattern_FabricKnit@2x.png)
+   background-size: 4px 4px
    .ui-content
       padding-left: 8px
 
