--- a/assets/css/skin.styl
+++ b/assets/css/skin.styl
@@ -121,14 +121,6 @@
    background-size: 4px 4px
    position: relative
    dropshadow: inset 0 10px 15px rgba(255,255,255, .4), inset 0 -10px 15px rgba(200,200,200,.4)
-   // .highlight
-   //    position: absolute
-   //    top: 0
-   //    bottom: 0
-   //    left: 0
-   //    right: 0
-   //    background-gradient: rgba(241,241,241, 0.5) rgba(255,255,255,0) 
-   //    z-index: -1
 
 .fans
    .fan
@@ -159,10 +151,11 @@
             font-size: .9em
             font-weight: lighter
             margin: 3px 0 4px 0
-            color: color-dark-red
+            color: color-red
       .data-wrap
          font-size: .8em
          padding-top: 4px
+         margin-bottom: -6px
          .data
             margin-right: 28px
             .label
