--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,6 +14,7 @@ html
       != css("pages/profile")
       != css("pages/points")
       != css("pages/leaderboard")
+      != css("pages/connect")
       != css("pages/preferences")
 
       != js("lib/jquery-1.8.2.js")
