--- a/assets/css/skin.styl
+++ b/assets/css/skin.styl
@@ -42,6 +42,14 @@
    background: url(/images/Tilable-Background@2x.png) 50% 0
    background-size: 50px 50px
 
+.background-highlight
+   position: absolute
+   top: 0
+   width: 100%
+   height: 100%
+   background: url(/images/Lighting-Background@2x.png) 50% 0 no-repeat
+   background-size: 320px 480px
+
 .footer
    .ui-navbar
       position: relative
@@ -204,3 +212,8 @@
       &.guess-the-score
          background-position: -154px 0
       
+@import "pages/profile"
+@import "pages/points"
+@import "pages/leaderboard"
+@import "pages/connect"
+@import "pages/preferences"
