--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,33 +6,19 @@ html
       meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no")
       meta(name="apple-mobile-web-app-capable", content="yes")
 
-      
       != css("lib/normalize")
       link(rel="stylesheet", href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css")
       != css("lib/fannect")
       != css("skin")
-      != css("pages/profile")
-      != css("pages/points")
-      != css("pages/leaderboard")
-      != css("pages/connect")
-      != css("pages/preferences")
 
-      != js("lib/jquery-1.8.2.js")
-      != js("pages/profile")
-      != js("pages/points")
-      != js("pages/leaderboard")
-      != js("pages/connect")
-      != js("pages/preferences")
-      != js("lib/jquerymobile-1.2.0.js")
-      != js("ext/scroller")
-      != js("ext/nav-handler")
+      != js("tree")
 
    - var viewDir = locals.root
    - var view = locals.filename.replace(viewDir, "").replace(".jade", "").replace(/^[\\\/]/g, "");
    - var viewClass = view.replace(/[\\\/]/g, "-");
    body
       div(class=viewClass, data-role="page", data-theme="a")
-
+         .background-highlight
          .header(data-role="header")
             block header
 
