--- a/views/points/guessTheScore/pick.jade
+++ b/views/points/guessTheScore/pick.jade
@@ -6,13 +6,17 @@ block header
 
 block content
    form.scrollable-content(action="/points/guessTheScore", method="post")
-      .input
+      .score
          .home.guess-block
             label(for="home_guess") Home
-            input(type="number", name="home_guess", id="home_guess", pattern="[0-9]*", value="", placeholder="0")
+            .guess-wrap
+               input(type="number", name="home_guess", id="home_guess", pattern="[0-9]*", value="", placeholder="0")
+               .value
          .away.guess-block
             label(for="away_guess") Away
-            input(type="number", name="away_guess", id="away_guess", pattern="[0-9]*", value="", placeholder="0")
+            .guess-wrap
+               input(type="number", name="away_guess", id="away_guess", pattern="[0-9]*", value="", placeholder="0")
+               .value
          .clear
 
       .team-info
@@ -25,5 +29,10 @@ block content
             .record= away.record
          .clear
 
-      .submit-wrap
-         button(type="submit", value="Submit")
+      .picking
+         button.submit-guess(type="submit", value="Submit")
+
+      .picked
+         .scrolling-text Your pick is set! Check back after the game to view results!
+         .game-preview
+            .title Game Preview
