--- a/views/points/guessTheScore/pick.jade
+++ b/views/points/guessTheScore/pick.jade
@@ -10,13 +10,13 @@ block content
          .home.guess-block
             label(for="home_guess") Home
             .guess-wrap
-               input(type="number", name="home_guess", id="home_guess", pattern="[0-9]*", value="", placeholder="0")
-               .value
+               input(type="number", name="home_guess", id="home_guess", pattern="[0-9]*", placeholder="0", data-bind="value: home_score, fadeIn: !pick_set()")
+               .value(data-bind="fadeIn: pick_set, duration: 400, text: home_score")
          .away.guess-block
             label(for="away_guess") Away
             .guess-wrap
-               input(type="number", name="away_guess", id="away_guess", pattern="[0-9]*", value="", placeholder="0")
-               .value
+               input(type="number", name="away_guess", id="away_guess", pattern="[0-9]*", placeholder="0", data-bind="value: away_score, fadeIn: !pick_set()")
+               .value(data-bind="fadeIn: pick_set, duration: 400, text: away_score")
          .clear
 
       .team-info
@@ -29,10 +29,10 @@ block content
             .record= away.record
          .clear
 
-      .picking
-         button.submit-guess(type="submit", value="Submit")
+      .picking(data-bind="visible: !pick_set()")
+         button.submit-guess(type="submit", value="Submit", data-bind="click: setPick, enabled: input_valid")
 
-      .picked
+      .picked(data-bind="fadeIn: pick_set")
          .scrolling-text Your pick is set! Check back after the game to view results!
          .game-preview
             .title Game Preview
