Changed how footer active is set. Waaaaayyyyy better.

--- a/views/points/attendanceStreak.jade
+++ b/views/points/attendanceStreak.jade
@@ -2,7 +2,7 @@ extend ../layout
 
 block header
    a(href="/points", data-icon="back", data-rel="back") Back
-   h1 Games
+   h1(data-menu-root="points") Games
 
 block content
    
