--- a/views/points/points.jade
+++ b/views/points/points.jade
@@ -1,7 +1,7 @@
 extend ../layout
 
 block header
-   h1 Points
+   h1(data-menu-root="points") Points
 
 block content
    ul.pattern-bg(data-role="listview")
