--- a/views/preferences/aboutFullTiltVentures.jade
+++ b/views/preferences/aboutFullTiltVentures.jade
@@ -2,6 +2,6 @@ extend ../layout
 
 block header
    a(href="/preferences", data-icon="back", data-rel="back") Back
-   h1 Full Tilt Ventures
+   h1(data-menu-root="preferences") Full Tilt Ventures
 
 block content
