--- a/views/leaderboard/leaderboard.jade
+++ b/views/leaderboard/leaderboard.jade
@@ -1,7 +1,7 @@
 extend ../layout
 
 block header
-   h1 Leaderboard
+   h1(data-menu-root="leaderboard") Leaderboard
 
 block content
    .ui-bar-a.switcher
