--- a/views/points/suggestGame.jade
+++ b/views/points/suggestGame.jade
@@ -2,6 +2,6 @@ extend ../layout
 
 block header
    a(href="/points", data-icon="back", data-rel="back") Back
-   h1 Games
+   h1(data-menu-root="points") Games
 
 block content
