--- a/views/preferences/aboutFannect.jade
+++ b/views/preferences/aboutFannect.jade
@@ -2,6 +2,6 @@ extend ../layout
 
 block header
    a(href="/preferences", data-icon="back", data-rel="back") Back
-   h1 Fannect
+   h1(data-menu-root="preferences") Fannect
 
 block content
