--- a/views/preferences/aboutRadeEccles.jade
+++ b/views/preferences/aboutRadeEccles.jade
@@ -2,6 +2,6 @@ extend ../layout
 
 block header
    a(href="/preferences", data-icon="back", data-rel="back") Back
-   h1 Rade | Eccles
+   h1(data-menu-root="preferences") Rade | Eccles
 
 block content
