--- a/views/preferences/account.jade
+++ b/views/preferences/account.jade
@@ -2,6 +2,6 @@ extend ../layout
 
 block header
    a(href="/preferences", data-icon="back", data-rel="back") Back
-   h1 Account
+   h1(data-menu-root="preferences") Account
 
 block content
