--- a/views/preferences/preferences.jade
+++ b/views/preferences/preferences.jade
@@ -1,7 +1,7 @@
 extend ../layout
 
 block header
-   h1 Preferences
+   h1(data-menu-root="preferences") Preferences
    
 block content
    ul.selections(data-role="listview", data-inset="true")
