--- a/views/preferences/privacy.jade
+++ b/views/preferences/privacy.jade
@@ -2,6 +2,6 @@ extend ../layout
 
 block header
    a(href="/preferences", data-icon="back", data-rel="back") Back
-   h1 Privacy
+   h1(data-menu-root="preferences") Privacy
 
 block content
