--- a/views/preferences/support.jade
+++ b/views/preferences/support.jade
@@ -2,7 +2,7 @@ extend ../layout
 
 block header
    a(href="/preferences", data-icon="back", data-rel="back") Back
-   h1 Support
+   h1(data-menu-root="preferences") Support
 
 block content
    
