--- a/views/profile/profile.jade
+++ b/views/profile/profile.jade
@@ -1,7 +1,7 @@
 extend ../layout
 
 block header
-   h1 Profile
+   h1(data-menu-root="profile") Profile
    a.ui-btn-right(href="/profile/selectSport", data-role="button") Add Team
 
 block content
