--- a/views/points/points.jade
+++ b/views/points/points.jade
@@ -19,7 +19,7 @@ block content
                   span.game-name Attendance Streak
       li
 
-         a(href="/points/gameFace/noGame", data-transition="slide")
+         a(href="/points/gameFace", data-transition="slide")
             .icon.gamecell.game-face
             .text
                .inner
